--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -14,7 +14,8 @@
         "semi": true,
         "singleQuote": true,
         "trailingComma": "all",
-        "printWidth": 120
+        "printWidth": 120,
+        "endOfLine": "auto"
       }
     ]
   }
