--- a/server/package.json
+++ b/server/package.json
@@ -28,8 +28,13 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/multer": "^1.4.7",
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.40.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^7.5.2",
     "multer": "^1.4.5-lts.1"
   }
 }
