--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-table": "^8.10.1",
     "autoprefixer": "^10.4.15",
     "formik": "^2.4.5",
     "postcss": "^8.4.30",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.1.2",
+    "react-select": "^5.7.4",
     "vite-plugin-svgr": "^3.2.0",
     "yup": "^1.2.0"
   },
