--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "formik": "^2.4.5",
     "postcss": "^8.4.30",
     "react": "^17.0.2",
+    "react-datepicker": "^4.18.0",
     "react-dom": "^17.0.2",
     "react-redux": "^8.1.2",
     "react-select": "^5.7.4",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.38",
+    "@types/react-datepicker": "^4.15.0",
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
