--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,11 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-table": "^8.10.1",
     "autoprefixer": "^10.4.15",
+    "chart.js": "^4.4.0",
     "formik": "^2.4.5",
     "postcss": "^8.4.30",
     "react": "^17.0.2",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.18.0",
     "react-dom": "^17.0.2",
     "react-redux": "^8.1.2",
